--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
                     Icon by Pixel perfect
                 </a>
             </p>
+            <p>
+                <a href="https://www.freepik.com/icon/minus_1828783">
+                    Icon by Pixel perfect
+                </a>
+            </p>
         </div>
         <div class="container" id="about">
             <h1>About</h1>
