fix: Display App Version and System Information in About Page
Previously, the About page lacked information about the app version,
Node.js version, Electron version, and Chrome version.

This commit addresses the issue by updating the About page to show
the relevant version and system information. The implementation
utilizes Electron's preloader and IPC features.

--- a/index.html
+++ b/index.html
@@ -210,51 +210,19 @@
         </div>
         <div class="container" id="about">
             <h1>About</h1>
+            <div class="about-logo">
+                <img src="chrono-chime-icon-32.png" alt="ChronoChime Logo" class="app-logo" />
+                <h2>ChronoChime</h2>
+            </div>
+            <h3 id="app-version"></h3>
             <p>
-                Are you looking for a sophisticated and user-friendly way to 
-                boost your productivity and stay organized throughout the day? 
-                Look no further than ChronoChime, an elegant Progressive Web App 
-                (PWA) designed to revolutionize how you manage your time.
+                <small id="node-version"></small> <br/>
+                <small id="chrome-version"></small> <br/>
+                <small id="electron-version"></small> <br/>
             </p>
-            <h2>Effortless Hourly Notifications</h2>
             <p>
-                ChronoChime empowers you with hourly notifications, ensuring you 
-                never miss a beat in your busy schedule. These gentle reminders 
-                act as your personal time-management assistant, gently nudging 
-                you towards your goals and commitments.
             </p>
-            <h2>Intuitive Design</h2>
             <p>
-                Our PWA boasts an intuitive interface that's easy to navigate. 
-                Whether you're a seasoned pro or new to time management tools, 
-                ChronoChime offers a seamless experience for all users.
-            </p>
-            <h2>Tailored to Your Needs</h2>
-            <p>
-                We understand that time management is a personal journey. That's 
-                why ChronoChime allows you to customize your notifications, 
-                ensuring they align with your unique workflow and priorities.
-            </p>
-            <h2>Seamless Integration</h2>
-            <p>
-                Worried about compatibility? Don't be. ChronoChime seamlessly 
-                integrates into your daily routine, no matter the device or 
-                platform you use. It's your time management companion wherever 
-                you go.
-            </p>
-            <h2>Stay Productive, Stay Ahead</h2>
-            <p>
-                With ChronoChime by your side, you'll stay on top of your tasks, 
-                appointments, and goals. Say goodbye to missed deadlines and 
-                hello to enhanced productivity.
-            </p>
-            <h2>Try ChronoChime Today</h2>
-            <p>
-                Ready to experience the future of time management? Try 
-                ChronoChime today and discover how effortless, elegant, and 
-                effective time management can be. Simply allow notifications, 
-                and let ChronoChime transform the way you manage your time. 
-                Your productivity journey starts here.
             </p>
         </div>
         <div id="offlineToast" class="toast">
