feat: Add auto launch on start up option
This commit adds a new feature to allow user to configure the app to be launched on startup automatically

This enhances the app's usability

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                             <option value="3">3 hours</option>
                         </select>
                     </p>
+                    <p>
+                        <label for="autoLaunchCheckbox" class="toggle-switch">
+                            <input id="autoLaunchCheckbox" type="checkbox" name="autoLaunchCheckbox"/>
+                            <span>🏁 Auto launch on startup</span>
+                        </label>
+                    </p>
                 </section>
                 <section id="sound" class="tabcontent">
                     <h2>🔊 Notification Sound</h2>
