--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.googleapis.com">
-    <title>ChronoChime - Hourly Notification</title>
+    <title>ChronoChime - Time Keeper Extraordinaire</title>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
   </head>
   <body>
@@ -39,7 +39,7 @@
         <!-- Transparent button to toggle the app drawer -->
         <div id="toggleDrawerButton" class="toggle-button"></div>          
         <div class="container" id="main">
-            <h1>ChronoChime - Hourly Notification PWA</h1>
+            <h1>ChronoChime - Time Keeper Extraordinaire</h1>
             <p id="countdownTimer"></p>
             <button id="askPermissionButton" class="cta-button">
                 🥺 Allow Notifications
