fix: Implement min and max length constraints
Previously, the create reminders form lacked
minimum and maximum length constraints for the reminder title.

This commit addresses this by adding the required
constraints to enhance the user experience. Now,
users will receive appropriate feedback when inputting
reminder titles that exceed or fall short of the specified length limits.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <form id="remindersForm" method="dialog" name="remindersForm">
                     <div class="dialog-content">
                         <div class="field">
-                            <input name="reminderTitleInput" id="reminderTitleInput" type="text" placeholder="Title" required/>
+                            <input name="reminderTitleInput" id="reminderTitleInput" type="text" placeholder="Title" required minlength="3" maxlength="250"/>
                             <label for="reminderTitleInput">Title</label>
                             <span class="validation-error" id="reminderTitleInputError">Title should be at least 3 characters and at most 250 characters</span>
                         </div>
