fix: Added typography styles

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div>
             <ul class="drawer-menu">
                 <!-- Links to different sections -->
-                <li><a href="/reminders">✅ Reminders</a></li>
-                <li><a href="/settings">🛠️ Settings</a></li>
-                <li><a href="/attributions">👍 Attributions</a></li>
-                <li><a href="/about">ℹ️ About</a></li>
+                <li><a class="body2" href="/reminders">✅ Reminders</a></li>
+                <li><a class="body2" href="/settings">🛠️ Settings</a></li>
+                <li><a class="body2" href="/attributions">👍 Attributions</a></li>
+                <li><a class="body2" href="/about">ℹ️ About</a></li>
             </ul>
             <!-- Social Icons Container -->
             <div class="social-icons">
