--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div>
             <ul class="drawer-menu">
                 <!-- Links to different sections -->
-                <li><a class="body2" href="/reminders">✅ Reminders</a></li>
-                <li><a class="body2" href="/settings">🛠️ Settings</a></li>
-                <li><a class="body2" href="/attributions">👍 Attributions</a></li>
-                <li><a class="body2" href="/about">ℹ️ About</a></li>
+                <li><span class="icon">✅</span><a class="body2" href="/reminders">Reminders</a></li>
+                <li><span class="icon">🛠️</span><a class="body2" href="/settings">Settings</a></li>
+                <li><span class="icon">👍</span><a class="body2" href="/attributions">Attributions</a></li>
+                <li><span class="icon">ℹ️</span><a class="body2" href="/about">About</a></li>
             </ul>
             <!-- Social Icons Container -->
             <div class="social-icons">
