fix: Fix navigation drawer issues
Fixed the typography and alinment issues in nav drawer

Aligned the social icons in a vertical named list to make it readable

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="drawer-header">
                 <!-- Your app logo and name -->
                 <a href="/"><img src="chrono-chime-icon-32.png" alt="ChronoChime Logo" class="app-logo" /></a>
-                <h2><a href="/">ChronoChime</a></h2>
+                <h2 class="heading"><a href="/">ChronoChime</a></h2>
             </div>
             <ul class="drawer-menu">
                 <!-- Links to different sections -->
@@ -24,16 +24,18 @@
                 <li><span class="icon">👍</span><a class="body2" href="/attributions">Attributions</a></li>
                 <li><span class="icon">ℹ️</span><a class="body2" href="/about">About</a></li>
             </ul>
+            <hr class="separator"/>
             <!-- Social Icons Container -->
             <div class="social-icons">
+                <div class="body2 social-title">Socials</div>
                 <a href="https://github.com/svijaykoushik/chorno-chime" target="_blank">
-                    <img src="github-mark.png" alt="GitHub" width="16" height="16" />
+                    <img src="github-mark.png" alt="GitHub" width="24" height="24" /> <span class="body2">Github</span>
                 </a>
                 <a href="https://dev.to/svijaykoushik" target="_blank">
-                    <img src="dev-black.png" alt="Dev.to" width="16" height="16" />
+                    <img src="dev-black.png" alt="Dev.to" width="24" height="24" /> <span class="body2">Dev.to</span>
                 </a>
                 <a href="https://twitter.com/VijaykoushikS" target="_blank">
-                    <img src="twitter-logo-black.png" alt="Twitter" width="16" height="16" />
+                    <img src="twitter-logo-black.png" alt="Twitter" width="24" height="24" /> <span class="body2">X</span>
                 </a>
             </div>
         </div>
