fix: Fix dialog styles
Fixed dialog typography styles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div id="reminders" class="container">
             <h1>Reminders</h1>
-            <button type="button" class="cta-button" id="newReminderBtn">➕ Add reminder</button>
+            <button type="button" class="cta-button" id="newReminderBtn"><span class="emoji">➕</span> Add reminder</button>
             <div id="reminderListContainer">
                 
             </div>
